# distlift

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  LICENSE  Makefile  README.md  distlift.toml  plan.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: publish.yml  tests.yml
src/distlift/: __init__.py  __main__.py  app.py  cli.py  cli_changelog.py  constants.py  editor.py  errors.py  hooks.py  logging_utils.py
src/distlift/changelog/: __init__.py  builder.py  compare_url.py  conventional.py  editor_prompt.py  formatter.py  git_log.py  models.py  parser.py  plugin.py  writer.py
src/distlift/config/: __init__.py  discovery.py  files.py  loader.py  merger.py  models.py  validators.py
src/distlift/dependencies/: __init__.py  configured_plugin.py  format.py  inventory.py  javascript.py  models.py  projects.py  python.py  registry_query.py  registry_resolver.py  service.py  upgrade_models.py  upgrade_service.py  version_cycle.py
src/distlift/deploy/: __init__.py  index_check.py  models.py  service.py  tags.py
src/distlift/languages/: __init__.py  base.py  javascript.py  python.py
src/distlift/manifests/: __init__.py  handler.py  package_json_file.py  pyproject_file.py  python_version_file.py  synology_info_file.py
src/distlift/monorepo/: __init__.py  change_detector.py  discovery.py
src/distlift/package_managers/: __init__.py  base.py  detection.py  installed.py  npm.py  pip.py  pnpm.py  yarn.py
src/distlift/plugins/: __init__.py  base.py  builtins.py  discovery.py  loader.py  manager.py  registry.py  scaffold.py
src/distlift/publish/: __init__.py  javascript.py  models.py  python.py
src/distlift/release/: __init__.py  changelog_extra.py  executor.py  models.py  monorepo.py  planner.py  simple.py  version_files.py
tests/: cli_dependency_autoupdate_test.py  cli_dependency_upgrade_test.py  cli_test.py  conftest.py  editor_test.py  hooks_dependency_updates_test.py  hooks_test.py
tests/changelog/: __init__.py  builder_apply_edited_test.py  builder_test.py  compare_url_test.py  conventional_test.py  editor_prompt_test.py  parser_entry_test.py  parser_formatter_test.py  writer_test.py
tests/config/: __init__.py  dependency_updates_loader_test.py  dependency_updates_merger_test.py  dependency_updates_validators_test.py  files_test.py  loader_test.py  merger_test.py  validators_test.py
tests/dependencies/: configured_plugin_test.py  dependency_service_test.py  inventory_test.py  javascript_test.py  models_test.py  projects_external_test.py  projects_test.py  python_test.py  upgrade_service_test.py  version_cycle_test.py
tests/deploy/: service_test.py  tags_test.py
tests/languages/: javascript_test.py  python_test.py
tests/manifests/: python_version_file_test.py  synology_info_file_test.py
tests/monorepo/: change_detector_test.py  discovery_test.py
tests/package_managers/: detection_test.py  install_test.py  installed_test.py
tests/plugins/: dependency_updater_discovery_test.py  registry_dependency_updater_test.py  registry_package_manager_test.py  scaffold_test.py
tests/publish/: javascript_test.py  python_test.py
tests/release/: executor_dependency_updates_test.py  executor_test.py  monorepo_test.py  simple_test.py
tests/terminal/: dependency_selector_test.py
tests/vcs/: git_test.py  tags_test.py
tests/versioning/: __init__.py  bump_test.py  formatter_test.py  parser_test.py  resolver_test.py
(+12 files in other folders)
