[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "distlift"
version = "0.1.6"
description = "A release orchestrator for Python and JavaScript packages"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Nicu Tofan", email = "nicu.tofan@gmail.com" }]
keywords = ["release", "versioning", "git", "monorepo", "ci"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Version Control",
    "Topic :: Software Development :: Build Tools",
]
dependencies = [
    "attrs>=23.2",
    "click>=8.4",
    "packaging>=24",
    "typer>=0.12",
    "tomlkit>=0.13",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "pre-commit>=3.7",
]

[project.scripts]
distlift = "distlift.cli:app"

[project.entry-points."distlift.plugins"]
# external plugins declare themselves here

[tool.hatch.build.targets.wheel]
packages = ["src/distlift"]

[tool.ruff]
src = ["src"]
line-length = 79

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short"

[tool.mypy]
python_version = "3.11"
strict = true
