[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "distlift"
version = "1.1.1"
description = "A release orchestrator for Python and JavaScript packages"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Nicu Tofan", email = "nicu.tofan@gmail.com" }]
keywords = ["release", "versioning", "git", "monorepo", "ci"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Version Control",
    "Topic :: Software Development :: Build Tools",
]
dependencies = [
    "attrs>=23.2",
    "click>=8.4.2",
    "packaging>=26.2",
    "typer>=0.16",
    "tomlkit>=0.13",
    "prompt_toolkit>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.21",
    "mypy>=2.3.0",
    "pre-commit>=4.6.0",
]

[project.scripts]
distlift = "distlift.cli:app"

[project.entry-points."distlift.plugins"]
# external plugins declare themselves here

[tool.hatch.build.targets.wheel]
packages = ["src/distlift"]

[tool.ruff]
src = ["src"]
line-length = 79

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short"

[tool.mypy]
python_version = "3.11"
strict = true
